--- a/basic_version.ipynb
+++ b/basic_version.ipynb
@@ -6,7 +6,7 @@
       "name": "basic_version.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPAb8tN9oCB0TotwZwEONwG",
+      "authorship_tag": "ABX9TyP8TNdn3EzC27Bz5noaz2Ch",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,6 +35,21 @@
       },
       "source": [
         "### AFL 2021 season: 18 teams start with 1500 points\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CUBpt5P-Wt8G"
+      },
+      "source": [
+        "Method:\n",
+        "\n",
+        "1. Start with 1500 points for all teams\n",
+        "2. The pre-season/starting E value (or win probability) equals 0.5 for all teams\n",
+        "3. After Round 1 results, re-rate each team with using the 'new rating' formula: New Rating = old rating + K(1 - win prob) if they won,or New Rating = old rating + K(0 - win prob) if they lost ::note that K = 20\n",
+        "4. For the 2nd round, matchups decide the new win probabilities which then provide predictions for each game. Use the win probability formula: the inverse of 1 + {10 to the power of [(opposing team rating - team rating divided) by 400]}\n",
+        "5. Repeat"
       ]
     },
     {
