--- a/basic_version.ipynb
+++ b/basic_version.ipynb
@@ -6,7 +6,7 @@
       "name": "basic_version.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP8TNdn3EzC27Bz5noaz2Ch",
+      "authorship_tag": "ABX9TyOc1hDeLt0Rw7RFPni1Q7jw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -716,12 +716,26 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "kapi9gh5Pb2C"
+        "id": "x6YR5UBVXD5o"
       },
       "source": [
-        ""
+        "The next (Round 2) matchups are modelled as binary columns\n",
+        "For round 2 a new data frame includes all of the columns from the previous summary df plus binary columns for R2 matchups:  "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3C85VIBNXl3-"
+      },
+      "source": [
+        "contests_w2 = rframe\n",
+        "# For Carlton (CAR) v Collingwood (COL):\n",
+        "contests_w2['G1'] = [0,0,1,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0]\n",
+        "# For Geelong (GEE) v Brisbane (BRI):\n",
+        "contests_w2['G1'] = [0,1,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0]"
       ],
       "execution_count": null,
       "outputs": []
