--- a/basic_version.ipynb
+++ b/basic_version.ipynb
@@ -6,7 +6,7 @@
       "name": "basic_version.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOc1hDeLt0Rw7RFPni1Q7jw",
+      "authorship_tag": "ABX9TyPRgqTeNd/RKOB2h8ffruO0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -721,8 +721,17 @@
         "id": "x6YR5UBVXD5o"
       },
       "source": [
-        "The next (Round 2) matchups are modelled as binary columns\n",
-        "For round 2 a new data frame includes all of the columns from the previous summary df plus binary columns for R2 matchups:  "
+        "The next (Round 2) matchups are modelled as binary columns with 1 in competing team's positions, 0 in all other positions.\n",
+        "  "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZXUdb-9GZXtr"
+      },
+      "source": [
+        "The R2 working data frame includes all of the columns from the previous summary df plus binary columns for R2 matchups:"
       ]
     },
     {
