--- a/basic_version.ipynb
+++ b/basic_version.ipynb
@@ -6,7 +6,7 @@
       "name": "basic_version.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPRgqTeNd/RKOB2h8ffruO0",
+      "authorship_tag": "ABX9TyMn9hjtk4Kq8swnAbixXya9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -744,7 +744,11 @@
         "# For Carlton (CAR) v Collingwood (COL):\n",
         "contests_w2['G1'] = [0,0,1,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0]\n",
         "# For Geelong (GEE) v Brisbane (BRI):\n",
-        "contests_w2['G1'] = [0,1,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0]"
+        "contests_w2['G2'] = [0,1,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0]\n",
+        "# For Sydney (SYD) v Adelaide (ADL):\n",
+        "contests_w2['G3'] = [1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0]\n",
+        "# For Port Adelaide (PAD) v Essendon (ESS):\n",
+        "contests_w2['G4'] = [0,0,0,0,1,0,0,0,0,0,0,0,1,0,0,0,0,0]"
       ],
       "execution_count": null,
       "outputs": []
