--- a/basic_version.ipynb
+++ b/basic_version.ipynb
@@ -6,7 +6,7 @@
       "name": "basic_version.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMn9hjtk4Kq8swnAbixXya9",
+      "authorship_tag": "ABX9TyPOF5ZLcZC9FXRww8iMCFBJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -748,7 +748,18 @@
         "# For Sydney (SYD) v Adelaide (ADL):\n",
         "contests_w2['G3'] = [1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0]\n",
         "# For Port Adelaide (PAD) v Essendon (ESS):\n",
-        "contests_w2['G4'] = [0,0,0,0,1,0,0,0,0,0,0,0,1,0,0,0,0,0]"
+        "contests_w2['G4'] = [0,0,0,0,1,0,0,0,0,0,0,0,1,0,0,0,0,0]\n",
+        "# For StKilda (STK) v Melbourne (MEL):\n",
+        "contests_w2['G5'] = [0,0,0,0,0,0,0,0,0,0,1,0,0,0,1,0,0,0]\n",
+        "# For Gold Coast (GLD) v North Melbourne (NME):\n",
+        "contests_w2['G6'] = [0,0,0,0,0,0,0,1,0,0,0,1,0,0,0,0,0,0]\n",
+        "# For Hawthorn (HAW) v Richmond (RIC):\n",
+        "contests_w2['G7'] = [0,0,0,0,0,0,0,0,1,0,0,0,0,1,0,0,0,0]\n",
+        "\n",
+        "# contests_w2['G8'] = [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0]\n",
+        "# contests_w2['G9'] = [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0]\n",
+        "\n",
+        "\n"
       ],
       "execution_count": null,
       "outputs": []
