--- a/basic_version.ipynb
+++ b/basic_version.ipynb
@@ -6,7 +6,7 @@
       "name": "basic_version.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOgst8GTrq+7/JxrNAVi3MQ",
+      "authorship_tag": "ABX9TyPKwPIByas817s6b3xpoU+4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,7 +58,7 @@
         "id": "Y2kLeK9acCkX"
       },
       "source": [
-        "*Note: Additional features to be included in subsequent version will include home/away advantage or disadvantage to modify win probabilities, and season starting points to reflect previous season's standings.*"
+        "*Note: Additional features to be included in subsequent versions will include home/away advantage or disadvantage to modify win probabilities, and season starting points to reflect previous season's standings.*"
       ]
     },
     {
