--- a/basic_version.ipynb
+++ b/basic_version.ipynb
@@ -6,7 +6,7 @@
       "name": "basic_version.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPKwPIByas817s6b3xpoU+4",
+      "authorship_tag": "ABX9TyNzH6sf5RKv+J3jnc4ccPip",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -80,7 +80,7 @@
           "height": 204
         },
         "id": "vVtH6OzQJAwt",
-        "outputId": "b3698b10-01b6-4b1b-d736-e8a27ba0902e"
+        "outputId": "ebffeec4-b8d3-4b3f-9a96-a71537042bbc"
       },
       "source": [
         "team = ['ADL','BRI','CAR','COL','ESS','FRE','GEE','GLD','GWS','HAW','MEL','NME','PAD','RIC','STK','SYD','WBD','WCE']\n",
@@ -163,14 +163,14 @@
           "height": 607
         },
         "id": "jd135iMELX8E",
-        "outputId": "0af06946-05c5-4517-97bd-3c3eaa615a04"
+        "outputId": "f29fdf03-936e-4ff9-8861-c9d6cf8b8917"
       },
       "source": [
         "rframe['win_prob_w1'] = 0.5\n",
         "rframe['rating_w_zero'] = 1500\n",
         "rframe"
       ],
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -337,7 +337,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 3
         }
       ]
     },
@@ -358,14 +358,14 @@
           "height": 359
         },
         "id": "OOA2PY3hMzNu",
-        "outputId": "495f78fd-f11a-4fc1-ad5a-627c0c4a6974"
+        "outputId": "45d358fe-a93d-4452-a656-878ac5a51696"
       },
       "source": [
         "# These were the Week 1 results in the order of teams above:\n",
         "rframe['result_w1'] = [1,0,0,0,0,0,0,0,0,1,1,0,1,1,1,1,1,1]\n",
         "rframe.head(10)"
       ],
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -487,7 +487,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 4
         }
       ]
     },
@@ -509,13 +509,13 @@
           "height": 607
         },
         "id": "5FFOlPEVPGbn",
-        "outputId": "db984bca-8f0c-41b4-832b-5c449b634f39"
+        "outputId": "e8356665-1f25-40a7-c730-685e786be912"
       },
       "source": [
         "rframe['rating_w_1'] = rframe['rating_w_zero'] + (20*(rframe['result_w1'] - rframe['win_prob_w1']))\n",
         "rframe"
       ],
-      "execution_count": 8,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -720,7 +720,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 5
         }
       ]
     },
@@ -746,7 +746,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3C85VIBNXl3-"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3C85VIBNXl3-",
+        "outputId": "b3a81b17-5b4e-4341-91ac-0884f7aedb7a"
       },
       "source": [
         "contests_w2 = rframe\n",
@@ -763,14 +767,59 @@
         "# For Gold Coast (GLD) v North Melbourne (NME):\n",
         "contests_w2['G6'] = [0,0,0,0,0,0,0,1,0,0,0,1,0,0,0,0,0,0]\n",
         "# For Hawthorn (HAW) v Richmond (RIC):\n",
-        "contests_w2['G7'] = [0,0,0,0,0,0,0,0,1,0,0,0,0,1,0,0,0,0]\n",
+        "contests_w2['G7'] = [0,0,0,0,0,0,0,0,0,1,0,0,0,1,0,0,0,0]\n",
+        "# For Western Bulldogs (WBD) v West Coast (WCE):\n",
+        "contests_w2['G8'] = [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,1]\n",
+        "# For Fremantle (FRE) v GWS (GWS):\n",
+        "contests_w2['G9'] = [0,0,0,0,0,1,0,0,1,0,0,0,0,0,0,0,0,0]\n",
         "\n",
-        "# contests_w2['G8'] = [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0]\n",
-        "# contests_w2['G9'] = [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0]\n",
-        "\n",
-        "\n"
+        "# Check all slots correct:\n",
+        "contests_w2['all_positions'] = contests_w2['G1'] + contests_w2['G2'] + contests_w2['G3'] + contests_w2['G4'] + contests_w2['G5'] + contests_w2['G6'] + contests_w2['G7'] + contests_w2['G8'] + contests_w2['G9'] \n",
+        "contests_w2['all_positions']"
       ],
-      "execution_count": null,
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0     1\n",
+              "1     1\n",
+              "2     1\n",
+              "3     1\n",
+              "4     1\n",
+              "5     1\n",
+              "6     1\n",
+              "7     1\n",
+              "8     1\n",
+              "9     1\n",
+              "10    1\n",
+              "11    1\n",
+              "12    1\n",
+              "13    1\n",
+              "14    1\n",
+              "15    1\n",
+              "16    1\n",
+              "17    1\n",
+              "Name: all_positions, dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3UwPS863oPhw"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 6,
       "outputs": []
     }
   ]
