--- a/basic_version.ipynb
+++ b/basic_version.ipynb
@@ -6,7 +6,7 @@
       "name": "basic_version.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNf8fg+sA6VsnGGDKYK/JiL",
+      "authorship_tag": "ABX9TyPGkfrgx6cOc/qfejrggqpy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -809,6 +809,15 @@
           },
           "execution_count": 8
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "u1XiYB49xxKJ"
+      },
+      "source": [
+        "### Calculating the win probabilities"
       ]
     },
     {
