--- a/basic_version.ipynb
+++ b/basic_version.ipynb
@@ -3,10 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "basic_version.ipynb",
+      "name": "Copy of basic_version.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOo9LBiZ1R+zTwnvZnaaNvV",
+      "authorship_tag": "ABX9TyMatn2QqArAt8p66yocVVBm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -69,7 +69,7 @@
       "source": [
         "import pandas as pd"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -87,7 +87,7 @@
         "rframe = pd.DataFrame(team)\n",
         "rframe.head()"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -166,11 +166,12 @@
         "outputId": "d72410cd-4046-45f0-c834-b71ffbc87b3b"
       },
       "source": [
+        "rframe[]\n",
         "rframe['win_prob_w1'] = 0.5\n",
         "rframe['rating_w_zero'] = 1500\n",
         "rframe"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -365,7 +366,7 @@
         "rframe['result_w1'] = [1,0,0,0,0,0,0,0,0,1,1,0,1,1,1,1,1,1]\n",
         "rframe.head(10)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -515,7 +516,7 @@
         "rframe['rating_w_1'] = rframe['rating_w_zero'] + (20*(rframe['result_w1'] - rframe['win_prob_w1']))\n",
         "rframe"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -777,7 +778,7 @@
         "contests_w2['all_positions'] = contests_w2['G1'] + contests_w2['G2'] + contests_w2['G3'] + contests_w2['G4'] + contests_w2['G5'] + contests_w2['G6'] + contests_w2['G7'] + contests_w2['G8'] + contests_w2['G9'] \n",
         "contests_w2['all_positions']"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -869,7 +870,7 @@
       "source": [
         "contests_w2"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1283,7 +1284,7 @@
         "## For G1 CAR v COL\n",
         "1/(1 + (10**((1490-1490)/400)))"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1314,7 +1315,7 @@
         "contests_w2['opp_team'] = ['SYD','GEE','CAR','COL','PAD','GWS','BRI','NME','FRE','RIC','STK','GLD','ESS','HAW','MEL','ADL','WCE','WBD']\n",
         "contests_w2"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1742,7 +1743,7 @@
       "source": [
         "contests_w2.columns = ['team','win_prob_w1','rating_w_zero','result_w1','rating_w_1','G1','G2','G3','G4','G5','G6','G7','G8','G9','all_positions','opp_team']"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1761,7 +1762,7 @@
         "lookup_vals_w2.columns = ['opp_team','rating_w1_opp']\n",
         "lookup_vals_w2.head()"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1846,7 +1847,7 @@
         "                      on ='opp_team', \n",
         "                      how ='left')"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1862,7 +1863,7 @@
       "source": [
         "w2_joined"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2310,7 +2311,7 @@
         "## Now the formula can be applied row by row:\n",
         "w2_joined['win_prob_w2'] = 1/(1 + (10**((w2_joined['rating_w1_opp']-w2_joined['rating_w_1'])/400)))"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2326,7 +2327,7 @@
       "source": [
         "w2_joined"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
