--- a/basic_version.ipynb
+++ b/basic_version.ipynb
@@ -3,10 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Copy of basic_version.ipynb",
+      "name": "basic_version.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMatn2QqArAt8p66yocVVBm",
+      "authorship_tag": "ABX9TyOcCAniJwGxIyzACYXJRN4a",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -166,7 +166,7 @@
         "outputId": "d72410cd-4046-45f0-c834-b71ffbc87b3b"
       },
       "source": [
-        "rframe[]\n",
+        "rframe['seq'] = rframe.index + 1\n",
         "rframe['win_prob_w1'] = 0.5\n",
         "rframe['rating_w_zero'] = 1500\n",
         "rframe"
