--- a/basic_version.ipynb
+++ b/basic_version.ipynb
@@ -6,7 +6,7 @@
       "name": "basic_version.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOXqiJXSCPLB/pnTSgdH5Iv",
+      "authorship_tag": "ABX9TyPYuoza2FYSp3seJDjr8nq+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -805,27 +805,29 @@
       "source": [
         "contests_w2 = rframe\n",
         "# For Carlton (CAR[3]) v Collingwood (COL[4]):\n",
+        "rframe['G1'] == 0\n",
+        "rframe['G1'] = np.where(rframe[('seq'] == 3 |rframe['seq'] == 3), df['G1'],1,0)\n",
         "contests_w2['G1'] = [0,0,1,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0]\n",
         "# For Geelong (GEE[7]) v Brisbane (BRI[2]):\n",
-        "contests_w2['G2'] = [0,1,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0]\n",
+        "#contests_w2['G2'] = [0,1,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0]\n",
         "# For Sydney (SYD[16]) v Adelaide (ADL[1]):\n",
-        "contests_w2['G3'] = [1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0]\n",
+        "#contests_w2['G3'] = [1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0]\n",
         "# For Port Adelaide (PAD[13]) v Essendon (ESS[5]):\n",
-        "contests_w2['G4'] = [0,0,0,0,1,0,0,0,0,0,0,0,1,0,0,0,0,0]\n",
+        "#contests_w2['G4'] = [0,0,0,0,1,0,0,0,0,0,0,0,1,0,0,0,0,0]\n",
         "# For StKilda (STK[15]) v Melbourne (MEL[11]):\n",
-        "contests_w2['G5'] = [0,0,0,0,0,0,0,0,0,0,1,0,0,0,1,0,0,0]\n",
+        "#contests_w2['G5'] = [0,0,0,0,0,0,0,0,0,0,1,0,0,0,1,0,0,0]\n",
         "# For Gold Coast (GLD[8]) v North Melbourne (NME[12]):\n",
-        "contests_w2['G6'] = [0,0,0,0,0,0,0,1,0,0,0,1,0,0,0,0,0,0]\n",
+        "#contests_w2['G6'] = [0,0,0,0,0,0,0,1,0,0,0,1,0,0,0,0,0,0]\n",
         "# For Hawthorn (HAW[10]) v Richmond (RIC[14]):\n",
-        "contests_w2['G7'] = [0,0,0,0,0,0,0,0,0,1,0,0,0,1,0,0,0,0]\n",
+        "#contests_w2['G7'] = [0,0,0,0,0,0,0,0,0,1,0,0,0,1,0,0,0,0]\n",
         "# For Western Bulldogs (WBD[17]) v West Coast (WCE[18]):\n",
-        "contests_w2['G8'] = [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,1]\n",
+        "#contests_w2['G8'] = [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,1]\n",
         "# For Fremantle (FRE[6]) v GWS (GWS[9]):\n",
-        "contests_w2['G9'] = [0,0,0,0,0,1,0,0,1,0,0,0,0,0,0,0,0,0]\n",
+        "#contests_w2['G9'] = [0,0,0,0,0,1,0,0,1,0,0,0,0,0,0,0,0,0]\n",
         "\n",
         "# Check all 18 positions have exactly one location:\n",
-        "contests_w2['all_positions'] = contests_w2['G1'] + contests_w2['G2'] + contests_w2['G3'] + contests_w2['G4'] + contests_w2['G5'] + contests_w2['G6'] + contests_w2['G7'] + contests_w2['G8'] + contests_w2['G9'] \n",
-        "contests_w2['all_positions']"
+        "#contests_w2['all_positions'] = contests_w2['G1'] + contests_w2['G2'] + contests_w2['G3'] + contests_w2['G4'] + contests_w2['G5'] + contests_w2['G6'] + contests_w2['G7'] + contests_w2['G8'] + contests_w2['G9'] \n",
+        "#contests_w2['all_positions']"
       ],
       "execution_count": 6,
       "outputs": [
