--- a/basic_version.ipynb
+++ b/basic_version.ipynb
@@ -6,7 +6,7 @@
       "name": "basic_version.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOMsRqY3lTVeZDQH/zl6+m4",
+      "authorship_tag": "ABX9TyNstIuCbtzi1xzBdBtWH3Fu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -68,7 +68,9 @@
       },
       "source": [
         "import numpy as np\n",
-        "import pandas as pd"
+        "import pandas as pd\n",
+        "import warnings\n",
+        "warnings.filterwarnings('ignore')"
       ],
       "execution_count": 1,
       "outputs": []
@@ -81,7 +83,7 @@
           "height": 204
         },
         "id": "vVtH6OzQJAwt",
-        "outputId": "ddba311b-bae9-484e-a1f2-c1df04ba4d94"
+        "outputId": "e93155fb-d0b0-4fb6-8e52-87fbfc01eda3"
       },
       "source": [
         "team = ['ADL','BRI','CAR','COL','ESS','FRE','GEE','GLD','GWS','HAW','MEL','NME','PAD','RIC','STK','SYD','WBD','WCE']\n",
@@ -164,7 +166,7 @@
           "height": 607
         },
         "id": "jd135iMELX8E",
-        "outputId": "00c3f658-eef8-4cc5-ac8f-018c20728b64"
+        "outputId": "5541964e-8877-4fd6-dc24-59342fd8ae99"
       },
       "source": [
         "rframe['seq'] = rframe.index + 1\n",
@@ -379,7 +381,7 @@
           "height": 359
         },
         "id": "OOA2PY3hMzNu",
-        "outputId": "91559998-b050-4b3f-d843-94c1c8b50e81"
+        "outputId": "cae8d152-f659-4fe5-c56a-bb8fe09537b6"
       },
       "source": [
         "# These were the Week 1 results in the order of teams above:\n",
@@ -541,7 +543,7 @@
           "height": 607
         },
         "id": "5FFOlPEVPGbn",
-        "outputId": "10c4fc0d-3498-40d0-e16a-04b405ed6342"
+        "outputId": "d4a3f366-2746-49ef-8c49-52e85b395f53"
       },
       "source": [
         "rframe['rating_w_1'] = rframe['rating_w_zero'] + (20*(rframe['result_w1'] - rframe['win_prob_w1']))\n",
@@ -801,7 +803,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3C85VIBNXl3-",
-        "outputId": "8bd91420-082b-48a1-a931-23192765d7ed"
+        "outputId": "a3b0ea06-543b-4725-f0bf-719a9e40eac2"
       },
       "source": [
         "contests_w2 = rframe\n",
@@ -838,7 +840,7 @@
         "contests_w2['sum_check'] = contests_w2[col_list].sum(axis=1)\n",
         "contests_w2['sum_check']"
       ],
-      "execution_count": 11,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -868,7 +870,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 6
         }
       ]
     },
@@ -880,12 +882,12 @@
           "height": 607
         },
         "id": "XH9N7kpOWp-G",
-        "outputId": "6824243b-4170-4478-ec53-0d4debdbf7a5"
+        "outputId": "abc63d05-82c6-42e2-cbe2-fbcc566290d1"
       },
       "source": [
         "contests_w2"
       ],
-      "execution_count": 12,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1301,7 +1303,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 7
         }
       ]
     },
@@ -1313,7 +1315,7 @@
       "source": [
         "contests_w2 = contests_w2.drop(['sum_check'], axis = 1)"
       ],
-      "execution_count": 15,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -1369,14 +1371,14 @@
           "height": 607
         },
         "id": "1cnnu8AW0ewE",
-        "outputId": "a30e43c1-b3eb-4a8a-b0b4-62e25fdea1b4"
+        "outputId": "e2c90f7d-ebc7-4b3d-a52e-00232563380c"
       },
       "source": [
         "# Create opposition team rating column for R2:\n",
         "contests_w2['opp_team'] = ['SYD','GEE','CAR','COL','PAD','GWS','BRI','NME','FRE','RIC','STK','GLD','ESS','HAW','MEL','ADL','WCE','WBD']\n",
         "contests_w2"
       ],
-      "execution_count": 16,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1792,7 +1794,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 9
         }
       ]
     },
@@ -1804,7 +1806,7 @@
       "source": [
         "contests_w2.columns = ['team','seq','win_prob_w1','rating_w_zero','result_w1','rating_w_1','G1','G2','G3','G4','G5','G6','G7','G8','G9','opp_team']"
       ],
-      "execution_count": 18,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -1815,7 +1817,7 @@
           "height": 204
         },
         "id": "_XMaSD0rE_1n",
-        "outputId": "608c7c8d-a368-4836-aed7-7a2d76d975c1"
+        "outputId": "fdb933f4-1e8b-4919-bf41-20caf613425c"
       },
       "source": [
         "# create concise lookup table which is a subset of contests_w2:\n",
@@ -1823,7 +1825,7 @@
         "lookup_vals_w2.columns = ['opp_team','rating_w1_opp']\n",
         "lookup_vals_w2.head()"
       ],
-      "execution_count": 19,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1893,7 +1895,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 19
+          "execution_count": 11
         }
       ]
     },
@@ -1908,7 +1910,7 @@
         "                      on ='opp_team', \n",
         "                      how ='left')"
       ],
-      "execution_count": 20,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -1919,12 +1921,12 @@
           "height": 607
         },
         "id": "YpzkvsZhHfUB",
-        "outputId": "8522fc14-f992-4985-a58a-1609a38df5d2"
+        "outputId": "930c142c-7c11-4191-c017-2fafb76a9567"
       },
       "source": [
         "w2_joined"
       ],
-      "execution_count": 21,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2359,7 +2361,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 21
+          "execution_count": 13
         }
       ]
     },
@@ -2372,7 +2374,7 @@
         "## Now the formula can be applied row by row:\n",
         "w2_joined['win_prob_w2'] = 1/(1 + (10**((w2_joined['rating_w1_opp']-w2_joined['rating_w_1'])/400)))"
       ],
-      "execution_count": 22,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -2383,12 +2385,12 @@
           "height": 607
         },
         "id": "Z1MIgr3RI2OM",
-        "outputId": "eb2f3fb8-b28c-4b73-daf6-cfe760fc69df"
+        "outputId": "eb1a73ea-9856-4388-de6f-b80c717db08b"
       },
       "source": [
         "w2_joined"
       ],
-      "execution_count": 23,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2842,7 +2844,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 23
+          "execution_count": 15
         }
       ]
     },
@@ -2883,7 +2885,7 @@
       "source": [
         "rframe_2 = w2_joined[['team','seq','win_prob_w2','rating_w_1']]"
       ],
-      "execution_count": 24,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -2907,45 +2909,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4LHCjTvMtYQR",
-        "outputId": "43c4b91c-e27c-4d74-c93c-694315f98247",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "4LHCjTvMtYQR"
       },
       "source": [
         "rframe_2['result_w2'] = [0,0,0,1,0,1,1,1,0,0,1,0,1,1,0,1,1,0]"
       ],
-      "execution_count": 25,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  \"\"\"Entry point for launching an IPython kernel.\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": 17,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jifuw0buvtnF",
-        "outputId": "631453c4-fcfd-4946-b042-fea45ba9a1da",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 607
-        }
+        },
+        "id": "jifuw0buvtnF",
+        "outputId": "8e3f53d2-60ad-43ff-98f0-e46ccf88e16f"
       },
       "source": [
         "rframe_2"
       ],
-      "execution_count": 26,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3150,7 +3135,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 26
+          "execution_count": 18
         }
       ]
     },
@@ -3166,38 +3151,20 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PhPApOGewRIq",
-        "outputId": "a87fb576-9d01-4edd-ba1a-3668704b7686",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 811
-        }
+          "height": 607
+        },
+        "id": "PhPApOGewRIq",
+        "outputId": "7f18049c-01bc-4593-9d29-ad5180ecbdc7"
       },
       "source": [
         "rframe_2['rating_w_2'] = rframe_2['rating_w_1'] + (20*(rframe_2['result_w2'] - rframe_2['win_prob_w2']))\n",
         "rframe_2['rating_w_2'] = rframe_2['rating_w_2'].round(2)\n",
         "rframe_2"
       ],
-      "execution_count": 28,
+      "execution_count": 19,
       "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  \"\"\"Entry point for launching an IPython kernel.\n",
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  \n"
-          ],
-          "name": "stderr"
-        },
         {
           "output_type": "execute_result",
           "data": {
@@ -3420,7 +3387,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 28
+          "execution_count": 19
         }
       ]
     }
