--- a/basic_version.ipynb
+++ b/basic_version.ipynb
@@ -6,7 +6,7 @@
       "name": "basic_version.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNstIuCbtzi1xzBdBtWH3Fu",
+      "authorship_tag": "ABX9TyNrsQua+2pdeN5186nDr96+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
         "id": "MsDj6Fg0IzMr"
       },
       "source": [
-        "### AFL 2021 season: 18 teams start with 1500 points\n"
+        "### **AFL 2021 season: 18 teams start with 1500 points**\n"
       ]
     },
     {
@@ -3389,6 +3389,15 @@
           },
           "execution_count": 19
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "eHnoRLGbzbvE"
+      },
+      "source": [
+        "### **Modelling the next matches (Round 3): same steps as above, but use functions to decrease code.**"
       ]
     }
   ]
